
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/qtab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:minHeight="70dp"
        android:paddingBottom="10dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/option1tab3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questab3"
        app:layout_constraintVertical_bias="0.135"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/atab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:minHeight="70dp"
        android:paddingBottom="10dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answertab3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/questab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/ques3"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/qtab3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
         />

    <TextView
        android:id="@+id/optionstab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/options"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/option1tab3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qtab3"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/option1tab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"

        android:textSize="15sp"
        android:minHeight="45dp"
        android:paddingBottom="10dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/option2tab3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionstab3"
        app:layout_constraintVertical_bias="0.387" />

    <TextView

        android:id="@+id/option2tab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"

        android:background="@color/white"
        android:minHeight="45dp"
        android:paddingBottom="10dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/option3tab3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option1tab3"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/option3tab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="45dp"
        android:paddingBottom="10dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="10dp"

        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/option4tab3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option2tab3"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/option4tab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:minHeight="45dp"
        android:paddingBottom="10dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="10dp"

        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/answertab3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option3tab3"
        app:layout_constraintVertical_bias="0.634" />

    <TextView
        android:id="@+id/answertab3"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ans"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/option4tab3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/atab3"
        app:layout_constraintVertical_bias="0.732"
        android:scrollbars="vertical"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>
